v. 0.0.5 added timer-config

--- a/admin/jsonConfig.json
+++ b/admin/jsonConfig.json
@@ -6,6 +6,12 @@
             "type": "text",
             "label": "IP-Address of the Aircon",
             "newLine": true
+        },
+        "timer": {
+            "type": "number",
+            "label": "Time in s to retrieve data from the aircon",
+            "newLine": true
         }
+
     }
 }
