rename time in s to min

--- a/admin/jsonConfig.json
+++ b/admin/jsonConfig.json
@@ -9,7 +9,7 @@
         },
         "timer": {
             "type": "number",
-            "label": "Time in s to retrieve data from the aircon",
+            "label": "Time in min to retrieve data from the aircon",
             "newLine": true
         }
 
